# fcl_self_collision_checker

./: CMakeLists.txt  README.md  package.xml
src/: main.cpp
urdf/: g1_29dof_lock_waist.urdf
urdf/meshes/: head_link_collision_model.STL  left_ankle_pitch_link_collision_model.STL  left_ankle_roll_link_collision_model.STL  left_elbow_link_collision_model.STL  left_hand_index_0_link_collision_model.STL  left_hand_index_1_link_collision_model.STL  left_hand_palm_link_collision_model.STL  left_hand_thumb_0_link_collision_model.STL  left_hand_thumb_1_link_collision_model.STL  left_hand_thumb_2_link_collision_model.STL  left_hip_pitch_link_collision_model.STL  left_hip_roll_link_collision_model.STL  left_hip_yaw_link_collision_model.STL  left_knee_link_collision_model.STL  left_rubber_hand_collision_model.STL  left_shoulder_pitch_link_collision_model.STL  left_shoulder_roll_link_collision_model.STL  left_shoulder_yaw_link_collision_model.STL  left_wrist_pitch_link_collision_model.STL  left_wrist_roll_link_collision_model.STL  left_wrist_roll_rubber_hand_collision_model.STL  left_wrist_yaw_link_collision_model.STL  logo_link_collision_model.STL  pelvis_collision_model.STL  pelvis_contour_link_collision_model.STL  right_ankle_pitch_link_collision_model.STL  right_ankle_roll_link_collision_model.STL  right_elbow_link_collision_model.STL  right_hand_index_1_link_collision_model.STL  right_hand_middle_0_link_collision_model.STL  right_hand_palm_link_collision_model.STL  right_hand_thumb_0_link_collision_model.STL  right_hand_thumb_1_link_collision_model.STL  right_hand_thumb_2_link_collision_model.STL  right_hip_pitch_link_collision_model.STL  right_hip_roll_link_collision_model.STL  right_hip_yaw_link_collision_model.STL  right_knee_link_collision_model.STL  right_rubber_hand_collision_model.STL  right_shoulder_pitch_link_collision_model.STL  (+20 more)
